--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Run basic test
         run: |
           pip check
-          python -m py_compile
+          python -m py_compile app.py
 
   build:
     runs-on: ubuntu-latest
