--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,8 +49,8 @@ jobs:
 
       - name: Build and push Docker image
         run: |
-          docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/flask-crud-app:latest .
-          docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/flask-crud-app:latest
+          docker build -t ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/flask-crud-app:latest .
+          docker push ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/flask-crud-app:latest
       
       - name: Deploy to the VM 
         run: |
@@ -61,8 +61,8 @@ jobs:
           sudo apt install -y docker.io &&
           gcloud auth configure-docker ${{ secrets.GCP_REGION }}-docker.pkg.dev &&
           sudo docker system prune -a -f &&
-          sudo docker pull ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/flask-crud-app:latest &&
-          sudo docker run -d -p 5000:5000 --name flask-crud-app ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/flask-crud-app:latest"
+          sudo docker pull ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/flask-crud-app:latest &&
+          sudo docker run -d -p 5000:5000 --name flask-crud-app ${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/my-repo/flask-crud-app:latest"
         
       
   
